# Searching-for-the-Answer

./: CMakeLists.txt  main.cpp
src/: invertedIndex.cpp  invertedIndex.hpp
tests/: invertedIndex_test.cpp
